fix hero-image and cards on mobile view

--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -79,6 +79,7 @@
     min-height: 9rem;
     max-height: 9rem;
     min-width: 9rem;
+    max-width: 9rem;
   }
   .info {
     margin-top: 5rem;
